blog/infra/k8s/ingress-srv.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetesio/use-regex: "true"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-cluserup-src
                servicePort: 4000
          -path: /posts
            backend:
              serviceName: query-srv
              servicePort: 4002
          -path: /posts/?(.*)/comments
            backend: 
              serviceName: commentes/srv
              servicePort: 4001
          -path: /?(.*)
          backend:  
            serviceName: client-srv 
            servicePort: 3000
